Added autoclipboard option

--- a/app/components/Settings.css
+++ b/app/components/Settings.css
@@ -2,6 +2,14 @@
   width: 80%;
 }
 
+.limits {
+  display: flex;
+}
+
+.checkbox input {
+  margin-top: 15px;
+}
+
 .limits div{
   width: 50%;
   float: left;
