Added notification sound, saving settings
- Settings are now stored as they are changed.
- If the timelimit is valid and present, users have the option to play a
sound when it expires.
- Added another status for more clarity in what's happening
- The detected starting phrase will be displayed in the list.
- Displayed time will stay 0 once a roll has expired, until the next
roll begins.

--- a/app/components/RollList.css
+++ b/app/components/RollList.css
@@ -1,6 +1,6 @@
 .rollList {
   position: absolute;
-  padding: 0;
+  padding: 0px;
   margin: 0;
   left: 50%;
   transform: translate(-50%, 0);
@@ -11,4 +11,11 @@
   overflow-x: hidden;
   overflow-y: auto;
   list-style-type: unset;
+}
+
+.detectedPhrase {
+  background-color: #c1e7f7;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid;
 }
