--- a/app/components/Parser.css
+++ b/app/components/Parser.css
@@ -18,9 +18,11 @@
   left: 50%;
   transform: translate(-50%, 0);
   width: 400px;
-  /* top: 50px; */
-  /* bottom: 30px; */
-  /* border: 1px solid black; */
+}
+
+.footer {
+  position: absolute;
+  bottom: 5px;
 }
 
 .left {
